# gbdhsignal

./: go.mod  go.sum  main.go  pyproject.toml
docs/: tgdh.md
gbdhsignal/: __main__.py  client.py  server.py
measure/: atgdh_100.csv  atgdh_1000.csv  atgdh_10000.csv  atgdh_500.csv
method/: atgdh.go  tgdh.go
model/: message.go  ratchet.go  room_member.go  user.go
util/: util.go
verifpal/: _.vp  atgdh.vp  atgdh_m3.vp  atgdh_m4.vp  atgdh_m5.vp
